Admin user settable verification badge & fix text overflow issue.

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -11,6 +11,7 @@
     color: @color-default;
     font-family: @font-family;
     word-wrap: break-word;
+    word-break: break-all;
   }
 
   pre {
